--- a/anova1.qmd
+++ b/anova1.qmd
@@ -29,27 +29,27 @@ for(i in 1:100){
   x <- rnorm(10)
   if(i == 1){
     data <- x %>% as.data.frame()
-    colnames(data) <- "Data"
-    data$Group <- paste0("x",i)
+    colnames(data) <- "Response"
+    data$Explanatory <- paste0("x",i)
   }else{
     newdat <- x %>% as.data.frame()
-    colnames(newdat) <- "Data"
-    newdat$Group <- paste0("x",i)
+    colnames(newdat) <- "Response"
+    newdat$Explanatory <- paste0("x",i)
     data <- rbind(data,newdat)
   }
 }
 
 # summarize by group
-gg_data <- ddply(data, "Group", summarise,
-                 N = length(Data),
-                 mean = mean(Data),
-                 sd = sd(Data),
+summary_data <- ddply(data, "Explanatory", summarise,
+                 N = length(Response),
+                 mean = mean(Response),
+                 sd = sd(Response),
                  se = sd / sqrt(N))
 
-ggplot(gg_data, aes(x = Group, y = mean, group = Group)) +
+ggplot(summary_data, aes(x = Explanatory, y = mean, group = Explanatory)) +
   geom_point() +
-  geom_errorbar(data = gg_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
-                                    color = Group), width = 0.1) +
+  geom_errorbar(data = summary_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
+                                    color = Explanatory), width = 0.1) +
   geom_hline(yintercept = 0, col = "black", linewidth = 0.5) +
   ylim(c(-1.5,1.5)) +
   theme_classic() +
@@ -66,27 +66,27 @@ for(i in 1:100){
   x <- rnorm(100)
   if(i == 1){
     data <- x %>% as.data.frame()
-    colnames(data) <- "Data"
-    data$Group <- paste0("x",i)
+    colnames(data) <- "Response"
+    data$Explanatory <- paste0("x",i)
   }else{
     newdat <- x %>% as.data.frame()
-    colnames(newdat) <- "Data"
-    newdat$Group <- paste0("x",i)
+    colnames(newdat) <- "Response"
+    newdat$Explanatory <- paste0("x",i)
     data <- rbind(data,newdat)
   }
 }
 
 # summarize by group
-gg_data <- ddply(data, "Group", summarise,
-                 N = length(Data),
-                 mean = mean(Data),
-                 sd = sd(Data),
+summary_data <- ddply(data, "Explanatory", summarise,
+                 N = length(Response),
+                 mean = mean(Response),
+                 sd = sd(Response),
                  se = sd / sqrt(N))
 
-ggplot(gg_data, aes(x = Group, y = mean, group = Group)) +
+ggplot(summary_data, aes(x = Explanatory, y = mean, group = Explanatory)) +
   geom_point() +
-  geom_errorbar(data = gg_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
-                                    color = Group), width = 0.1) +
+  geom_errorbar(data = summary_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
+                                    color = Explanatory), width = 0.1) +
   geom_hline(yintercept = 0, col = "black", linewidth = 0.5) +
   ylim(c(-1.5,1.5)) +
   theme_classic() +
@@ -108,37 +108,37 @@ for(i in 1:4){
   if(i == 1){
     x <- rnorm(10, mean = 2)
     data <- x %>% as.data.frame()
-    colnames(data) <- "Data"
-    data$Group <- paste0("x",i)
+    colnames(data) <- "Response"
+    data$Explanatory <- paste0("x",i)
   }else{
     newdat <- x %>% as.data.frame()
-    colnames(newdat) <- "Data"
-    newdat$Group <- paste0("x",i)
+    colnames(newdat) <- "Response"
+    newdat$Explanatory <- paste0("x",i)
     data <- rbind(data,newdat)
   }
 }
 
 # split into "typical" table
 expanded_data <- NULL
-expanded_data$x1 <- data$Data[which(data$Group=="x1")]
-expanded_data$x2 <- data$Data[which(data$Group=="x2")]
-expanded_data$x3 <- data$Data[which(data$Group=="x3")]
-expanded_data$x4 <- data$Data[which(data$Group=="x4")]
+expanded_data$x1 <- data$Response[which(data$Explanatory=="x1")]
+expanded_data$x2 <- data$Response[which(data$Explanatory=="x2")]
+expanded_data$x3 <- data$Response[which(data$Explanatory=="x3")]
+expanded_data$x4 <- data$Response[which(data$Explanatory=="x4")]
 
 expanded_data <- expanded_data %>%
   as.data.frame()
 
 # summarize by group
-gg_data <- ddply(data, "Group", summarise,
-                 N = length(Data),
-                 mean = mean(Data),
-                 sd = sd(Data),
+summary_data <- ddply(data, "Explanatory", summarise,
+                 N = length(Response),
+                 mean = mean(Response),
+                 sd = sd(Response),
                  se = sd / sqrt(N))
 
-ggplot(gg_data, aes(x = Group, y = mean, group = Group)) +
+ggplot(summary_data, aes(x = Explanatory, y = mean, group = Explanatory)) +
   geom_point() +
-  geom_errorbar(data = gg_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
-                                    color = Group), width = 0.1) +
+  geom_errorbar(data = summary_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
+                                    color = Explanatory), width = 0.1) +
   geom_hline(yintercept = 0, col = "black", linewidth = 0.5) +
   ylim(c(-3,3)) +
   theme_classic() +
@@ -330,7 +330,7 @@ Given how small our $p$ value is, we want to round this to $p<0.0001$. As we can
 For this, we need to use the dataframe where we have all data in a single column and all ID's in the other columns. We then show how we want the ANOVA to operate across the data using the `~` symbol.
 
 ```{r}
-data_aov <- aov(Data ~ Group, data = data)
+data_aov <- aov(Response ~ Explanatory, data = data)
 
 summary(data_aov)
 ```
@@ -348,10 +348,10 @@ To do this by hand, we will need a lot of data from our aforementioned ANOVA tes
 We need to calculate pairwise differences between each set of means.
 
 ```{r}
-x1_mean <- mean(data$Data[data$Group == "x1"])
-x2_mean <- mean(data$Data[data$Group == "x2"])
-x3_mean <- mean(data$Data[data$Group == "x3"])
-x4_mean <- mean(data$Data[data$Group == "x4"])
+x1_mean <- mean(data$Response[data$Explanatory == "x1"])
+x2_mean <- mean(data$Response[data$Explanatory == "x2"])
+x3_mean <- mean(data$Response[data$Explanatory == "x3"])
+x4_mean <- mean(data$Response[data$Explanatory == "x4"])
 
 group_means <- c(x1_mean, x2_mean, x3_mean, x4_mean)
 
@@ -425,7 +425,7 @@ We can also use `HSD.test` to get more specific results:
 ```{r}
 tukey_data_aov <- HSD.test(data_aov,
                            # what to group by?
-                           "Group",
+                           "Explanatory",
                            # significance level?
                            alpha = 0.05, 
                            # are data unbalanced
@@ -443,7 +443,7 @@ This output is nice because it labels groups based on which groups belong togeth
 When we plot our ANOVAs, we want to show which mean is different from all of the others. Below, I will show the full pipeline for performing an ANOVA on a dataset and plotting the data at the end using out `data` object.
 
 ```{r}
-data_aov <- aov(Data ~ Group,data)
+data_aov <- aov(Response ~ Explanatory,data)
 
 summary(data_aov)
 ```
@@ -452,49 +452,56 @@ Now, we need to summarize things based on our `plyr` function.
 
 ```{r}
 # summarize by group
-gg_data <- ddply(data, "Group", summarise,
-                 N = length(Data),
-                 mean = mean(Data),
-                 sd = sd(Data),
+summary_data <- ddply(data, "Explanatory", summarise,
+                 N = length(Response),
+                 mean = mean(Response),
+                 sd = sd(Response),
                  se = sd / sqrt(N))
 ```
 
 Now, we can use the aforementioned Tukey results to assign to groups. Because `agricolae` functions define the groups in a `$groups` slot, we can pull out these data and perform some minimal transformations to make them ready to plot. *This will save us a lot of time and hassle*.
 
 ```{r}
-# note first group must be EXACT MATCH to your gg_data object
+# note first group must be EXACT MATCH to your summary_data object
 # groups are saved in the Tukey object
 # this is true for Tukey later as well
 
+# the following is a function that will make the significant label table
+sig.label.maker <- function(tukey_test, group_name){
+  sig.labels <- tukey_test$groups %>% 
+    # convert to a data.frame
+    as.data.frame() %>%
+    # create a new column - place rownames into the column
+    # converts to a format better for ggplot
+    mutate(Explanatorys = rownames(tukey_test$groups)) %>%
+    # rename column to prevent confusion
+    # specify dplyr; default function may be from plyr and not work
+    dplyr::rename(significance = groups)
+  colnames(sig.labels)[which(colnames(sig.labels) == "Explanatorys")] <- group_name
+  return(sig.labels)
+}
+
 # pull out the groups slot from tukey
 # same for Kruskal later on!
-sig.labels <- tukey_data_aov$groups %>%
-  # convert to a data.frame
-  as.data.frame() %>%
-  # create a new column - place rownames into the column
-  # converts to a format better for ggplot
-  mutate(Group = rownames(tukey_data_aov$groups)) %>%
-  # rename column to prevent confusion
-  # specify dplyr; default function may be from plyr and not work
-  dplyr::rename(significance = groups)
+sig.labels <- sig.label.maker(tukey_data_aov, "Explanatory")
 
 sig.labels
 ```
 
-Note that in the above, the row labels and the column `Group` are identical. We moved these data into a column to make it easier to use `ggplot`. If you want letters to be different - capitalized or something else - you will have to do this yourself. Now we can plot our data and add the labels!
+Note that in the above, the row labels and the column `Explanatory` are identical. We moved these data into a column to make it easier to use `ggplot`. If you want letters to be different - capitalized or something else - you will have to do this yourself. Now we can plot our data and add the labels!
 
 ```{r}
-ggplot(gg_data, # plot summary data
+ggplot(summary_data, # plot summary data
        # Define plotting - x by group, y is mean, grouping by group
-       aes(x = Group, y = mean, group = Group)) +
+       aes(x = Explanatory, y = mean, group = Explanatory)) +
   # add points to plot for y values
   geom_point() +
   # add error bars around points
-  geom_errorbar(data = gg_data, 
+  geom_errorbar(data = summary_data, 
                 # define error bars
                 aes(ymin = mean - 2*se, ymax = mean+2*se,
                     # define color, size
-                                    color = Group), width = 0.1) +
+                                    color = Explanatory), width = 0.1) +
   # add line at average for the main group
   # this is not always known - nor requires!
   geom_hline(yintercept = 0, col = "black", linewidth = 0.5) +
@@ -507,12 +514,12 @@ ggplot(gg_data, # plot summary data
             # make bold
             fontface = "bold",
             # define where labels should go
-            aes(x = Group, 
+            aes(x = Explanatory, 
                 # define height of label
                 y = -2, 
                 # what are the labels?
                 label = paste0(significance))) +
-  xlab("Group Name") +
+  xlab("Explanatory Name") +
   ylab("Mean") +
   # remove legend - not needed here
   theme(legend.position = "none",
@@ -542,37 +549,37 @@ for(i in 1:4){
     x <- runif(10, min = 1, max = 2) %>%
       round(2)
     data <- x %>% as.data.frame()
-    colnames(data) <- "Data"
-    data$Group <- paste0("x",i)
+    colnames(data) <- "Response"
+    data$Explanatory <- paste0("x",i)
   }else{
     newdat <- x %>% as.data.frame()
-    colnames(newdat) <- "Data"
-    newdat$Group <- paste0("x",i)
+    colnames(newdat) <- "Response"
+    newdat$Explanatory <- paste0("x",i)
     data <- rbind(data,newdat)
   }
 }
 
 # split into "typical" table
 expanded_data <- NULL
-expanded_data$x1 <- data$Data[which(data$Group=="x1")]
-expanded_data$x2 <- data$Data[which(data$Group=="x2")]
-expanded_data$x3 <- data$Data[which(data$Group=="x3")]
-expanded_data$x4 <- data$Data[which(data$Group=="x4")]
+expanded_data$x1 <- data$Response[which(data$Explanatory=="x1")]
+expanded_data$x2 <- data$Response[which(data$Explanatory=="x2")]
+expanded_data$x3 <- data$Response[which(data$Explanatory=="x3")]
+expanded_data$x4 <- data$Response[which(data$Explanatory=="x4")]
 
 expanded_data <- expanded_data %>%
   as.data.frame()
 
 # summarize by group
-gg_data <- ddply(data, "Group", summarise,
-                 N = length(Data),
-                 mean = mean(Data),
-                 sd = sd(Data),
+summary_data <- ddply(data, "Explanatory", summarise,
+                 N = length(Response),
+                 mean = mean(Response),
+                 sd = sd(Response),
                  se = sd / sqrt(N))
 
-ggplot(gg_data, aes(x = Group, y = mean, group = Group)) +
+ggplot(summary_data, aes(x = Explanatory, y = mean, group = Explanatory)) +
   geom_point() +
-  geom_errorbar(data = gg_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
-                                    color = Group), width = 0.1) +
+  geom_errorbar(data = summary_data, aes(ymin = mean - 2*se, ymax = mean+2*se,
+                                    color = Explanatory), width = 0.1) +
   geom_hline(yintercept = 0, col = "black", linewidth = 0.5) +
   ylim(c(-3,3)) +
   theme_classic() +
@@ -597,7 +604,7 @@ The above histogram appears non-normal, and the Shapiro-Wilk also indicates this
 First, we need to order all the data in the entire dataset. **This is easiest to do if we use the dataset with all data in a single column.**
 
 ```{r}
-data$ranks <- rank(data$Data, ties.method = "average")
+data$ranks <- rank(data$Response, ties.method = "average")
 
 # view first couple of rows
 head(data)
@@ -606,10 +613,10 @@ head(data)
 Now, we need to calculate the sum of the ranks for each category. The below function will take the sum of the ranks for the rows which match the condition of having the group be `x1`.
 
 ```{r}
-x1_sum <- sum(data$ranks[which(data$Group=="x1")])
-x2_sum <- sum(data$ranks[which(data$Group=="x2")])
-x3_sum <- sum(data$ranks[which(data$Group=="x3")])
-x4_sum <- sum(data$ranks[which(data$Group=="x4")])
+x1_sum <- sum(data$ranks[which(data$Explanatory=="x1")])
+x2_sum <- sum(data$ranks[which(data$Explanatory=="x2")])
+x3_sum <- sum(data$ranks[which(data$Explanatory=="x3")])
+x4_sum <- sum(data$ranks[which(data$Explanatory=="x4")])
 ```
 
 Now, we need to calculate our test statistic. The test statistic is $H$, with: $$H = \frac{12}{N(N+1)} \cdot \Sigma \frac{R_j^2}{n_j}-3(N+1)$$In this equation, $R$ is the sum of the ranks for a given category. This follows a $\chi^2$ distribution with $k-1$ degrees of freedom, with $k$ referring to categories.
@@ -617,10 +624,10 @@ Now, we need to calculate our test statistic. The test statistic is $H$, with: $
 For these, we need to know what $n$ is for each category.
 
 ```{r}
-n1 <- length(data$ranks[which(data$Group=="x1")])
-n2 <- length(data$ranks[which(data$Group=="x2")])
-n3 <- length(data$ranks[which(data$Group=="x3")])
-n4 <- length(data$ranks[which(data$Group=="x4")])
+n1 <- length(data$ranks[which(data$Explanatory=="x1")])
+n2 <- length(data$ranks[which(data$Explanatory=="x2")])
+n3 <- length(data$ranks[which(data$Explanatory=="x3")])
+n4 <- length(data$ranks[which(data$Explanatory=="x4")])
 ```
 
 Next, we can calculate the sums of the $\frac{R^2}{n}$ term.
@@ -658,7 +665,7 @@ As we can see, the probability is extremely low with $p < 0.0001$. One distribut
 We can also use *R* for this test.
 
 ```{r}
-kruskal_data <- kruskal.test(Data ~ Group, data)
+kruskal_data <- kruskal.test(Response ~ Explanatory, data)
 
 print(kruskal_data)
 ```
@@ -670,9 +677,9 @@ This test is similar, but not quite the same, as what we calculated above. The p
 data_kruskal <- with(data,
                      # define parameters for Kruskal-Wallis test
                      # First, variable of interest
-                     kruskal(Data,
+                     kruskal(Response,
                              # second, grouping variable
-                             Group,
+                             Explanatory,
                              # do you want group designations returned?
                              group = TRUE,
                              # what is this being done on?
